--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "vue3-carousel": "^0.16.0"
     }
 }
